Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-374

When using generic project with sub directories creating a new object to subdirectory instead defaults to home directory

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 1.3.1
    • Qt Creator 1.3.0 rc1, Qt Creator 1.3.0
    • None
    • Ubuntu 9.10 32bit (Qt 4.5.2)
      Qt Creator installed to home directory from the official RC installer.
    • 0e29cca4cbd6250e082d3037628cf5463187a7b9

    Description

      step to reproduce:
      1. Import a makefile based project which has sources in subdirectories.
      2. Right click a subdirectory in project explorer
      3. Select Add new

      Now default directory for the new file is user's home directory instead of directory that was selected in project explorer view.

      Important note: My test project has only top level wrapper makefile for waf build system.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dt Daniel Teske
            suokko Pauli Nieminen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes