Adding files for generic project get the right directory now.

For folder nodes.

Task-number: QTCREATORBUG-374
Reviewed-by: Thorbjorn