src/plugins/qmlprojectmanager/qmlprojectnodes.cpp
@@ -117,6 +117,8 @@ ProjectExplorer::FolderNode *QmlProjectNode::findOrCreateFolderByName(const QStr
     if (! end)
         return 0;
 
+    QString baseDir = QFileInfo(path()).path();
+
     QString folderName;
     for (int i = 0; i < end; ++i) {
         folderName.append(components.at(i));
@@ -131,7 +133,9 @@ ProjectExplorer::FolderNode *QmlProjectNode::findOrCreateFolderByName(const QStr
     else if (FolderNode *folder = m_folderByName.value(folderName))
         return folder;
 
-    FolderNode *folder = new FolderNode(component);
+    FolderNode *folder = new FolderNode(baseDir + "/" + folderName);
+    folder->setFolderName(component);
+
     m_folderByName.insert(folderName, folder);
 
     FolderNode *parent = findOrCreateFolderByName(components, end - 1);
